allergy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allergy-api-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: allergy-api-service
